--- a/app.scss
+++ b/app.scss
@@ -1,65 +1,69 @@
-  view,
-  scroll-view,
-  swiper,
-  swiper-item,
-  cover-view,
-  cover-image,
-  icon,
-  text,
-  rich-text,
-  progress,
-  button,
-  checkbox,
-  form,
-  input,
-  label,
-  radio,
-  slider,
-  switch,
-  textarea,
-  navigator,
-  audio,
-  camera,
-  image,
-  video {
-  	box-sizing: border-box;
-  }
-  
-  .my_btn {
-  	position: fixed;
-  	bottom: 150rpx;
-  	left: 7.5%;
-  	width: 85%;
-  	color: #fff;
-  	height: 90rpx;
-  	margin-top: -20rpx;
-  	text-align: center;
-  	font-size: 32rpx;
-  	line-height: 90rpx;
-  	letter-spacing: 2px;
-  	border-radius: 30rpx;
-  	background: linear-gradient(90deg, #FF5764, #FF3328);
-  	animation: mymove 5s infinite;
-  	animation-direction: alternate;
-  	animation-timing-function: ease-in-out;
-  }
-  
-  @keyframes mymove {
-  	0% {
-  		transform: scale(1);
-  		/*开始为原始大小*/
-  	}
-  
-  	25% {
-  		transform: scale(1.1);
-  		/*放大1.1倍*/
-  	}
-  
-  	50% {
-  		transform: scale(1);
-  	}
-  
-  	75% {
-  		transform: scale(1.1);
-  	}
-  }
+view,
+scroll-view,
+swiper,
+swiper-item,
+cover-view,
+cover-image,
+icon,
+text,
+rich-text,
+progress,
+button,
+checkbox,
+form,
+input,
+label,
+radio,
+slider,
+switch,
+textarea,
+navigator,
+audio,
+camera,
+image,
+video {
+    box-sizing: border-box;
+}
+
+.my_btn {
+    position: fixed;
+    bottom: 150rpx;
+    left: 7.5%;
+    width: 85%;
+    color: #fff;
+    height: 90rpx;
+    margin-top: -20rpx;
+    text-align: center;
+    font-size: 32rpx;
+    line-height: 90rpx;
+    letter-spacing: 2px;
+    border-radius: 30rpx;
+    background: linear-gradient(90deg, #ff5764, #ff3328);
+    animation: mymove 5s infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes mymove {
+    0% {
+        transform: scale(1);
+        /*开始为原始大小*/
+    }
+
+    25% {
+        transform: scale(1.1);
+        /*放大1.1倍*/
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    75% {
+        transform: scale(1.1);
+    }
+}
+
+[v-cloak] {
+    display: none !important;
+}
