--- a/app.scss
+++ b/app.scss
@@ -25,6 +25,23 @@ video {
     box-sizing: border-box;
 }
 
+.clamp {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+}
+
+.clamp_two {
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-break: break-all;
+    overflow: hidden;
+    white-space: normal;
+}
+
 .my_btn {
     position: fixed;
     bottom: 150rpx;
